# inksmash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  makefile
.github/actions/auto-changelog/: action.yml
.github/workflows/: rust-release.yml
src/: args.rs  b64.rs  err.rs  id.rs  img.rs  inks.rs  main.rs
